# medtermex

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  RESEARCH.md  SLURM.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.ipynb
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
common/: config.py  evaluate.py  fs.py  types.py
common/models/: nerbertscore.py
docs/models/: gliner.md  ollama.md  unsloth.md
logs/: .gitignore
notebooks/: 01-erikcalcina-benchmark.ipynb
projects/fewshot-prompting/: diagnose_extraction.py
projects/gliner/: README.md  requirements.txt  setup.py
projects/gliner/scripts/: evaluate_model.py  train_and_evaluate_models.sh  train_model.py
projects/llama/: README.md  requirements.txt  setup.py
scripts/: generate.py  greek_dataset_to_json.py  guidance_generate.py  guidance_test.py  prompts.py  setup_env.sh  test.py  test_model.py  train-test-dataset.py  train_test_dataset.py  training_shuffled.py
scripts/models/: eval_model_ollama.sh  train_eval_model_gliner.sh  train_eval_model_unsloth.sh
slurm/: nvidia_smi.sh  train_eval_model_unsloth.sh
src/core/: interface.py
src/core/config/: settings.py
src/models/: generate.py  guidance_generate.py  input_prompts.py
src/pipelines/: regex_label_validate_gliner.py  regex_label_validate_llm.py  vllm_label_validate.py
src/training/: evaluate_gliner.py  evaluate_ollama.py  evaluate_unsloth.py  train_gliner.py  train_unsloth.py
test/: test_common_evaluate.py
test/assets/: common.py
(+18 files in other folders)
